# fastapi-todo-cqrs

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yaml  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 3f284f1deb4f_initial_migration.py
core/: config.py  database.py  dependencies.py
src/: database.py  dependencies.py  main.py
src/buses/: __init__.py  base_bus.py  buses.py  command_bus.py  query_bus.py
src/commands/handlers/: __init__.py  create_todo.py  delete_todo.py  update_todo.py
src/commands/types/: __init__.py  create_todo.py
src/models/: schemas.py  todo.py
src/queries/handlers/: __init__.py  get_todo.py  list_todos.py
src/queries/types/: get_todo.py  list_todos.py
src/shared/domain/buses/: buses.py  command_bus.py  query_bus.py
src/todos/application/create/: create_todo_command_handler.py
src/todos/application/delete/: delete_todo_command.py  delete_todo_command_handler.py
src/todos/application/get_todo/: get_todo_query_handler.py
src/todos/application/list_todos/: list_todos_query_handler.py
src/todos/application/update/: update_todo_command.py  update_todo_command_handler.py
src/todos/domain/: entity.py  schemas.py
