[tool.poetry]
name = "TODO APP with CQRS"
version = "2.0.0"
description = "Simple ToDo app for test CQRS pattern"
authors = ["PabloMor <pmopa@pm.me>"]

[tool.poetry.dependencies]
python = "^3.11"
uvicorn = "^0.21"
fastapi = "^0.95"
python-dotenv = "^1.0"
python-multipart = "^0.0.6"
email-validator = "^1.3.1"
requests = "^2.28"
pydantic = "^1.10"
gunicorn = "^20.1"
httpx = "^0.23.3"
psycopg2-binary = "^2.9.5"
#asyncpg = "^0.27.0"
alembic = "^1.10"
sqlalchemy = "^2.0"
pytest = "^7.2"
python-jose = {extras = ["cryptography"], version = "^3.3"}

[tool.poetry.dev-dependencies]
mypy = "^1.1"
black = "^23.1"
isort = "^5.12"
autoflake = "^2.0"
flake8 = "^6.0"
pytest = "^7.2"
sqlalchemy-stubs = "^0.4"
pytest-cov = "^4.0"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
line_length = 88

[build-system]
requires = ["poetry>=1.4.0"]
build-backend = "poetry.masonry.api"
